lab3/svc_manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3-service
  labels:
    app: lab3-react
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
    targetPort: 3000
  selector:
    app: lab3-react
