lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - lab3.com
    secretName: my-cert
  rules:
    - host: lab3.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: lab3-service
                port:
                  number: 443
